--- a/index.html
+++ b/index.html
@@ -157,32 +157,21 @@
           <div class="col-md-6">
               <h3><i class="fas fa-heart"></i>&nbsp; INTEREST</h3>
               <hr>
-              <div class="row">
-              <div class="col-sm-3">
-              <div class="interest">
-                  <div class="circle">
-                    <img src="images/cri.jpg">
-                  </div>
-                  <p class="title-2"> Cricket </p>
-                  </div>
+              <div class="row text-center">
+                <div class="col-md-4 "> 
+                    <div class="box"><img src="images/cri.jpg"></div>
+                  <p>Cricket</p>
                 </div>
-                <div class="col-sm-3">
-                    <div class="interest">
-                        <div class="circle">
-                          <img src="images/chess.jpg">
-                        </div>
-                        <p class="title-2"> Chess </p>
-                        </div>
-                      </div>
-                      <div class="col-sm-3">
-                          <div class="interest">
-                              <div class="circle">
-                                <img src="images/music.jpeg">
-                              </div>
-                              <p class="title-2"> Music </p>
-                              </div>
-                            </div>
-                    </div>
+                <div class="col-md-4 "> 
+                    <div class="box"><img src="images/chess.jpg"></div>
+                  <p>Chess</p>
+                </div>
+                <div class="col-md-4"> 
+                  <div class="box"><img src="images/music.jpeg"></div>
+               
+                  <p>Music</p>
+                </div>
+              </div>
               </div>
               
            </div>
